WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
279616
Regression(
283070@main
) Target app crashing when trying to view receipt from in store purchase
https://bugs.webkit.org/show_bug.cgi?id=279616
Summary
Regression(283070@main) Target app crashing when trying to view receipt from ...
Chris Dumez
Reported
2024-09-12 14:14:46 PDT
Target app crashing when trying to view receipt from in store purchase.
Attachments
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2024-09-12 14:14:56 PDT
<
rdar://135851815
>
Chris Dumez
Comment 2
2024-09-12 14:16:43 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/33570
EWS
Comment 3
2024-09-12 15:13:34 PDT
Committed
283582@main
(280eaf1c4a30): <
https://commits.webkit.org/283582@main
> Reviewed commits have been landed. Closing PR #33570 and removing active labels.
EWS
Comment 4
2024-09-16 18:21:02 PDT
Committed
283286.43@safari-7620-branch
(d3a60c446e2d): <
https://commits.webkit.org/283286.43@safari-7620-branch
> Reviewed commits have been landed. Closing PR #1787 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug