Regression(283070@main) Target app crashing when trying to view receipt from in store purchase https://bugs.webkit.org/show_bug.cgi?id=279616 rdar://135851815

Reviewed by Alex Christensen.

Null check the page before dereferencing it to avoid the crash.

* Source/WebKit/UIProcess/API/Cocoa/WKWebView.mm:
(-[WKWebView _setResourceLoadDelegate:]):

Canonical link: https://commits.webkit.org/283582@main